...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cXX-Gt-jnn">
                                        <rect key="frame" x="0.0" y="0.0" width="412" height="728.66666666666663"/>
                                        <subviews>
                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-yn-nBB">
                                                <rect key="frame" x="0.0" y="0.0" width="412" height="354.33333333333331"/>
                                                <color key="backgroundColor" red="0.24527746819999999" green="0.53481305040000005" blue="0.58749136739999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="TextViewCount"/>
                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            </textView>
                                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="top" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="isI-Gg-Iye">
                                                <rect key="frame" x="0.0" y="374.33333333333337" width="412" height="354.33333333333337"/>
...
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v4M-At-Bcq">
                                                                <rect key="frame" x="0.0" y="180.00000000000006" width="123.33333333333333" height="50"/>
                                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                                <color key="tintColor" systemColor="labelColor"/>
                                                                <state key="normal" title="+/-">
                                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
                                                                <connections>
                                                                    <action selector="tappedNegativeButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="5EH-Jf-iba"/>
                                                                </connections>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnJ-Cd-UdL">
                                                                <rect key="frame" x="0.0" y="240.00000000000006" width="123.33333333333333" height="50"/>
                                                                <color key="backgroundColor" red="0.77040380239999995" green="0.56366676090000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                                <state key="normal" title="AC">
                                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
                                                                <connections>
                                                                    <action selector="tappedACButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="aqH-Hm-1PX"/>
                                                                </connections>
                                                            </button>
...
