...
    // MARK: - Functions

    ///Generic function for displaying alerts.
    ///
    ///- Parameter message: The alert text message.
    func displayAlert (message: String) {
        let alertVC = UIAlertController(title: "Zéro!", message: message, preferredStyle: .alert)
        alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        return self.present(alertVC, animated: true, completion: nil)
    }

    ///Generic functionfor observing notifications.
    func observerNotifications() {
...
